Reimplement tests to use updated Attachable implementations